--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,22 @@
-barcode_generator==0.1rc15
-Flask==2.0.1
-Flask_MySQLdb==1.0.1
-Flask_Session==0.3.2
-pygal==2.4.0
-reportlab==3.5.49
-Werkzeug==2.0.1
+barcode==1.0.2
+barcode-generator==0.1rc15
+blinker==1.6.2
+cachelib==0.10.2
+click==8.1.5
+colorama==0.4.6
+Flask==2.3.2
+Flask-MySQLdb==1.0.1
+Flask-Session==0.5.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+Levenshtein==0.21.1
+MarkupSafe==2.1.3
+mysqlclient==2.2.0
+Pillow==10.0.0
+pipreq==0.4
+pygal==3.0.0
+python-barcode==0.15.1
+python-Levenshtein==0.21.1
+rapidfuzz==3.1.1
+reportlab==4.0.4
+Werkzeug==2.3.6
