--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 barcode==1.0.2
 barcode-generator==0.1rc15
+bcrypt==4.0.1
 blinker==1.6.2
 cachelib==0.10.2
+cffi==1.15.1
 click==8.1.5
 colorama==0.4.6
+cryptography==41.0.2
 Flask==2.3.2
 Flask-MySQLdb==1.0.1
 Flask-Session==0.5.0
@@ -14,6 +17,7 @@ MarkupSafe==2.1.3
 mysqlclient==2.2.0
 Pillow==10.0.0
 pipreq==0.4
+pycparser==2.21
 pygal==3.0.0
 python-barcode==0.15.1
 python-Levenshtein==0.21.1
